--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
 <body>
 	<div class="container">
 		<div id = "renderer"></div>
-		<div id="loaderPage">
+		<div id = "fullscrin">
+			<span>Open in fullscrin?</span>
+			<div id="yesFull"><span>yes</span></div>
+			<div id="noFull"><span>no</span></div>
+		</div>
+ 		<div id="loaderPage">
 			<img src="images/GALDERMA_LOGO.svg">
 			<div id="progressBar" min="0" max="100">
 				<div id="progress"></div>
