--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0, initial-scale=1.0, minimal-ui">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
-	<link type="image/x-icon" href="favicon.ico" rel="shortcut icon">
-	<link type="Image/x-icon" href="favicon.ico" rel="icon">
+	<link type="image/x-icon" href="G-favicon.png" rel="shortcut icon">
+	<link type="Image/x-icon" href="G-favicon.png" rel="icon">
 
 	<link type="text/css" rel="stylesheet" href="main.css">
 
