--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
 			<span class="post_header">Injection<br>Syringe</span>
 			<img src="images/message_ing.svg" alt="A massa id libero lacinia pharetra id eget diam" title="Injection"></img>
 		</div>
+		<div class="post_info" id="full_injector_info">
+			<span class="post_header">Prepared<br>Treatment</span>
+			<img src="images/message_ing.svg" alt="A massa id libero lacinia pharetra id eget diam" title="PreparedTreatment"></img>
+		</div>
 		<div class="post_info" id="needle_info">
 			<span class="post_header">Needle</span>
 			<img src="images/message_needle.svg" alt="Contains a massa id libero lacinia pharetra id eget diam" title="Needle"></img>
