--- a/index.html
+++ b/index.html
@@ -43,31 +43,32 @@
 		<div id="openPackageButton" type="button">
 			<div class="blockInButton">
 				<img src="images/open_icon.svg" alt="open" title="open">
-				<span>Open Package</span>
+				<span>Открыть</span>
 			</div>
 		</div>
 		<div id="backButton" type="button">
 			<div class="blockInButton">
 				<img src="images/Vector4.svg" alt="back" title="back">
-				<span>Back</span>
+				<span>Назад</span>
 			</div>
 		</div>
 		<div id="prepareButton" type="button">
 			<div class="blockInButton">
 				<img src="images/prepare_icon.png" alt="prepare" title="prepare">
-				<span>Prepare</span>
+				<span>Собрать шприц</span>
 			</div>
 		</div>
 		<div class="post_info" id="injector_info">
-			<span class="post_header">Injection<br>Syringe</span>
+			<span class="post_header">Обеспечивает точный<br>лифтинг</span>
 			<img src="images/message_ing.svg" alt="A massa id libero lacinia pharetra id eget diam" title="Injection"></img>
 		</div>
 		<div class="post_info" id="full_injector_info">
-			<span class="post_header">Prepared<br>Treatment</span>
-			<img src="images/message_ing.svg" alt="A massa id libero lacinia pharetra id eget diam" title="PreparedTreatment"></img>
+			<span class="post_header">Restylane® Lyft</span>
+			<img src="images/message_ing_full.svg" alt="A massa id libero lacinia pharetra id eget diam" title="PreparedTreatment"></img>
 		</div>
 		<div class="post_info" id="needle_info">
-			<span class="post_header">Needle</span>
+			<p><span class="post_header">Restylane® Lyft и<br>Restylane ® Lyft<br>Lidocaine</span></p>
+			<p><span class="post_annotation">укомплектованы иглой Terumo<br>29G TW</span></p>
 			<img src="images/message_needle.svg" alt="Contains a massa id libero lacinia pharetra id eget diam" title="Needle"></img>
 		</div>
 	</div>
