new ui - fixed prepare button, fixed font size for header in annotations

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			<img src="images/message_ing_full.svg" alt="A massa id libero lacinia pharetra id eget diam" title="PreparedTreatment"></img>
 		</div>
 		<div class="post_info" id="needle_info">
-			<p><span class="post_header">Restylane® Lyft и<br>Restylane ® Lyft<br>Lidocaine</span></p>
+			<p><span class="post_header">Restylane® Lyft и<br>Restylane® Lyft Lidocaine</span></p>
 			<p><span class="post_annotation">укомплектованы иглой Terumo<br>29G TW</span></p>
 			<img src="images/message_needle.svg" alt="Contains a massa id libero lacinia pharetra id eget diam" title="Needle"></img>
 		</div>
