added new animation for full injector, fixed ui for injector

--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
 			</div>
 		</div>
 		<div class="post_info" id="injector_info">
-			<span class="post_header">Обеспечивает точный<br>лифтинг</span>
+			<p><span class="post_header">Обеспечивает точный<br>лифтинг</span></p>
 			<img src="images/message_ing.svg" alt="A massa id libero lacinia pharetra id eget diam" title="Injection"></img>
 		</div>
 		<div class="post_info" id="full_injector_info">
-			<span class="post_header">Restylane® Lyft</span>
+			<p><span class="post_header">Restylane® Lyft</span></p>
 			<img src="images/message_ing_full.svg" alt="A massa id libero lacinia pharetra id eget diam" title="PreparedTreatment"></img>
 		</div>
 		<div class="post_info" id="needle_info">
